--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.gradle/*
-gradle/*
-.idea/*
+**/.gradle/*
+**/gradle/*
+**/.idea/*
 build/*
-wrapper/*
-gradlew
-gradlew.bat
+**/wrapper/*
+**/gradlew
+**/gradlew.bat
