--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'org.json:json:20210307'
+    implementation 'org.slf4j:slf4j-ext:1.7.32'
+    implementation 'ch.qos.logback:logback-core:1.2.7'
+    implementation 'ch.qos.logback:logback-classic:1.2.7'
 }
 
 test {
