--- a/codelab_timetracker/pubspec.yaml
+++ b/codelab_timetracker/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   intl: ^0.17.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -53,7 +55,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
+  generate: true # Add this line
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
