--- a/codelab_timetracker/pubspec.yaml
+++ b/codelab_timetracker/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+flutter_intl:
+  enabled: true
+  main_locale: es_VE
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
